Changelog for plone.app.linkintegrity

    (name of developer listed in brackets)

plone.app.linkintegrity - 1.0.4 Unreleased

    - Updated tests to work with Plone 4.0.
      [hannosch]

    - Referencing items are now listed in alphabetical order
      [witsch]

plone.app.linkintegrity - 1.0.3 Released December 5, 2007

    - Fixed setting up the test layer after GenericSetup update
      [witsch]

plone.app.linkintegrity - 1.0.2 Released November 7, 2007

    - Fixed parser error when handling malformed HTML
      [witsch]

    - Fixed security issue due to using pickles (see CVE-2007-5741)
      [witsch]

plone.app.linkintegrity - 1.0.1 Released September 10, 2007

    - Added view for updating link integrity information for all site content
      [witsch]

    - Made code in info.py more tolerant when encountering missing property
      sheets.
      [hannosch]

plone.app.linkintegrity - 1.0 Released August 16, 2007

    - Minor bug fixes and enhancements
      [witsch]

plone.app.linkintegrity - 1.0rc1.1 Released July 12, 2007

    - Bug and test fixes after upgrade to Zope 2.10.4
      [witsch]

plone.app.linkintegrity - 1.0rc1 Released July 8, 2007

    - Bugfixes & additional tests
      [witsch]

plone.app.linkintegrity - 1.0b3 Released May 4, 2007

plone.app.linkintegrity - 1.0b2 Released April 30, 2007

    - Integration of Plone's "delete confirmation" page
      [witsch]

plone.app.linkintegrity - 1.0b1 Released March 3, 2007

    - Fix tests in regard to changed `folder_contents` and unicode issues
      [witsch]

    - Updates to the monkey patch needed for five exceptions
      [wiggy]

plone.app.linkintegrity - 1.0a2 Released February 7, 2007

    - Bugfixes & other minor enhancements
      [witsch]

    - Eggification and move into plone.app namespace
      [optilude]

    - Proof of concept & initial version
      [witsch]

    - Initial package structure.
      [zopeskel]
